--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -19,13 +19,12 @@
             android:id="@+id/button"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"/>
-    <Button
+    <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/button2"
-            android:layout_below="@+id/button"
+            android:id="@+id/editText"
+            android:layout_below="@+id/txt"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="43dp"/>
+            android:layout_marginTop="56dp"/>
 
 </RelativeLayout>
